# Iso

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  control.h  main.cpp  tileset.h
docs/: Iso.data  Iso.js  Iso.wasm  index.html
script/: GenerateLookupTable.py
src/: control.h  debug.h  main.cpp  settings.h  tileset.cpp  tileset.h
src/control/: control.cpp  control.h
src/tileset/: tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
